package com.amazon.ata.music.playlist.service.exceptions;

public class InvalidRequestException extends RuntimeException{

    private static final long serialVersionUID = 123084019638305793L;

    public InvalidRequestException() { super(); };

    public InvalidRequestException(String message) {
        super(message);
    }

    public InvalidRequestException(Throwable cause) {
        super(cause);
    }

    public InvalidRequestException(String message, Throwable cause) {
        super(message, cause);
    }
}
